# pico-neuron

./: .clangd  .gitignore  CMakeLists.txt  README.MD  README.md  config.cfg  package-lock.json  pico_neuron_config.cmake  pico_sdk_import.cmake
.cache/clangd/index/: CLI.hpp.4854080AE52FA18C.idx  ConfigFile.cpp.EB09CE772AC9830D.idx  ConfigFile.hpp.2112F3C8CC7753BA.idx  HindmarshRose.c.685DB6D4EE7BB025.idx  HindmarshRose.cpp.537773F0BD622263.idx  HindmarshRose.cpp.7E2C6821A7728E1C.idx  HindmarshRose.h.E1CE4AED62D2123B.idx  HindmarshRose.hpp.23D484EF6C589352.idx  HindmarshRose.hpp.A98FDA6B1212D801.idx  HindmarshRoseMod.c.CED97026226580A7.idx  HindmarshRoseMod.cpp.8DFA363FB76D9B34.idx  HindmarshRoseMod.hpp.06481D8E96C09C36.idx  Model.c.7A3DEBD9FD8D5194.idx  Model.cpp.BE996D0CA7BA482C.idx  Model.cpp.FD37A1F6A918D0BD.idx  Model.h.9030AB16E7A2D399.idx  Model.hpp.4AD43B6230950565.idx  Model.hpp.D1DF78D71FFAB8E2.idx  ModelType.hpp.852028D57C9E0F6C.idx  ModelType.hpp.9A8AADE54AA9B221.idx  ModelUtils.c.1A6756743E1DC04A.idx  ModelUtils.cpp.C420BD7B48D2D7F5.idx  ModelUtils.hpp.28C4DE3A9902688E.idx  ModelUtils.hpp.7F713D17009F0CB2.idx  address_mapped.h.95939EA37550600A.idx  addressmap.h.32ABDE63AC2F7C32.idx  asm_helper.S.17786A38893CF79E.idx  assert.h.C003BD2C78A2ADC1.idx  atomic.c.7988C41515A6D13B.idx  binary_info.h.BE4DCB587C05C2BC.idx  bit_ops_aeabi.S.E19F609C39F79582.idx  boot2_w25q080.S.80D9A1E7846FB8A7.idx  boot_lock.c.2A1E610915C01CC4.idx  boot_lock.h.42B65D74E2DE3A03.idx  bootrom.c.AC2EA097D2E7ED96.idx  bootrom.h.98A052E8A61DBE08.idx  bootrom_constants.h.128924FEDA2545A9.idx  bootrom_constants.h.C66E10973017989D.idx  bootrom_lock.c.78543E1CBB6F29BF.idx  claim.c.4E58C16161715199.idx  (+168 more)
config/: hindmarsh_rose.cfg  hindmarsh_rose_chaotic.cfg  hindmarsh_rose_mod.cfg  hindmarsh_rose_mod_chaotic.cfg
config/default/: hindmarsh_rose.cfg  hindmarsh_rose_chaotic.cfg  hindmarsh_rose_mod.cfg  hindmarsh_rose_mod_chaotic.cfg
config/pico2/: hindmarsh_rose.cfg  hindmarsh_rose_chaotic.cfg  hindmarsh_rose_chaotic_syn.cfg  hindmarsh_rose_mod.cfg  hindmarsh_rose_mod_chaotic.cfg  hindmarsh_rose_mod_chaotic_syn.cfg  hindmarsh_rose_mod_syn.cfg
config/pico2/default/: hindmarsh_rose_chaotic_syn.cfg  hindmarsh_rose_mod_chaotic.cfg  hindmarsh_rose_mod_syn.cfg  hindmarsh_rose_syn.cfg
config/pico_w/: hindmarsh_rose.cfg  hindmarsh_rose_chaotic.cfg  hindmarsh_rose_chaotic_syn.cfg  hindmarsh_rose_mod.cfg  hindmarsh_rose_mod_syn.cfg  hindmarsh_rose_syn.cfg
config/pico_w/default/: hindmarsh_rose.cfg  hindmarsh_rose_chaotic.cfg  hindmarsh_rose_mod.cfg  hindmarsh_rose_mod_chaotic.cfg  hindmarsh_rose_syn.cfg
data/: hindmarsh-rose.csv  hindmarsh_rose.csv
example/: example.c
inc/: constants.hpp  default.h  default.hpp  fixed_utils.hpp  rtconfig.h  tusb_config.h  types.h
inc/ConfigFile/: ConfigFile.hpp
inc/Impulse/: Impulse.hpp
inc/Model/: HindmarshRose.h  HindmarshRose.hpp  HindmarshRoseMod.hpp  Model.h  Model.hpp  ModelType.h  ModelType.hpp  ModelUtils.hpp
scripts/: plot_model.py  python_reciver.py
src/: dso_handle.cpp  pico-neuron-c.cpp  pico-neuron.c  pico-neuron.cpp
src/ConfigFile/: ConfigFile.cpp
src/Model/: HindmarshRose.c  HindmarshRose.cpp  HindmarshRoseMod.cpp  Model.c  Model.cpp  ModelType.c  ModelUtils.cpp
